--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
+    "nodemailer": "^6.9.12",
+    "pdfkit": "^0.14.0",
+    "serve-favicon": "^2.5.0",
+    "uuid": "^9.0.1",
     "xmlrpc": "^1.3.2"
   }
 }
